[package]
name = "tree-sitter-pmc"
description = "Assembler w domu"
version = "0.1.0"
authors = ["Trenek"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pmc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/trenek/tree-sitter-pmc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
